<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="?attr/themedBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign"
            android:text=">"
            android:textSize="@dimen/text_size_medium"
            android:textColor="?android:attr/textColorHint"
            app:monospace="@{true}"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/prompt"
            tools:text="echo"
            android:textSize="@dimen/text_size_medium"
            android:textColor="?attr/colorDefinition"
            app:monospace="@{true}"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintLeft_toRightOf="@id/sign"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@id/edit_text"
            tools:text="hello world"
            android:textSize="@dimen/text_size_medium"
            android:textColor="?attr/colorLiteral"
            app:monospace="@{true}"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionGo"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            app:layout_constraintTop_toTopOf="@id/prompt"
            app:layout_constraintLeft_toRightOf="@id/prompt"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/prompt"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/prompt"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/output"
                    app:monospace="@{true}"
                    android:textSize="@dimen/text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/error"
                    app:monospace="@{true}"
                    android:visibility="gone"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
